# gpgdrive

./: .gitignore  requirements.txt  setup.cfg  setup.py
gpgdisk/: disk.py  manager.py  utils.py
