[metadata]
name = gpgdisk
version = 0.0.1
summary = GPG encrypted images
author = Roman Prykhodchenko
author-email = me@romcheg.me

[files]
packages =
    gpgdisk

[entry_points]
console_scripts =
    gpgdisk = gpgdisk.disk:main

[pbr]
autodoc_index_modules = True

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
